--- a/comments/.env
+++ b/comments/.env
@@ -1,1 +1,6 @@
 PORT=4001
+POSTS_SERVICE_URL="http://posts-clusterip-srv:4000/events"
+COMMENTS_SERVICE_URL="http://comments-srv:4001/events"
+QUERY_SERVICE_URL="http://query-srv:4002/events"
+EVENT_BUS_SERVICE_URL="http://event-bus-srv:4005/events"
+MODERATION_SERVICE_URL="http://moderation-srv:4003/events"
